--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
-name = "regexmatch"
+name = "politeness-check"
 version = "0.0.0"
-description = "Template repo for Guardrails Hub validators."
+description = "This validator ensures that a generated output is polite."
 authors = [
     {name = "Guardrails AI", email = "contact@guardrailsai.com"}
 ]
 license = {file = "LICENSE"}
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.8.1"
 dependencies = [
-    "rstr",
-    "guardrails-ai>=0.3.2"
+    "guardrails-ai>=0.3.2",
+    "litellm"
 ]
 
 [project.optional-dependencies]
